@@ -101,6 +101,7 @@ CYCLE_ACCEL_TEAM 1.0        # multiplicator to CYCLE_ACCEL for your temmates' wa
 CYCLE_ACCEL_ENEMY 1.0       # multiplicator to CYCLE_ACCEL for your enemies' walls
 CYCLE_ACCEL_RIM 0.0         # multiplicator to CYCLE_ACCEL for the rim walls
 CYCLE_ACCEL_SLINGSHOT 1.0   # multiplicator to CYCLE_ACCEL if you're between your wall and another wall
+CYCLE_ACCEL_TUNNEL 1.0      # multiplicator to CYCLE_ACCEL if you're between two walls that are not your own
 CYCLE_ACCEL_OFFSET 2.0      # acceleration offset. Must be positive or smaller than -CYCLE_WALL_NEAR, otherwise there is a risk of a division by zero.
 CYCLE_WALL_NEAR 6.0         # the distance from a wall below which wall-acceleration kicks in
 CYCLE_SOUND_SPEED 30.0      # sound speed divisor 
